# pico-neuralclick

./: .gitignore  CMakeLists.txt  README.md  create_model.py  main.cpp  requirements.txt  training_data.py
